base/data/dbeaver/middleware.yaml
# Strip prefix /foobar and /fiibar
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dbeaver-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /dbeaver
