base/data/dbeaver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbeaver
  namespace: dbeaver
  labels:
    app: dbeaver
spec:
  ports:
    - port: 8978
      name: client
      targetPort: client
  selector:
    app: dbeaver
